[gd_scene load_steps=7 format=2]

[ext_resource path="res://game_screen/game_screen.gd" type="Script" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://game_screen/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sky.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 2
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 1280, 360 )

[sub_resource type="StreamTexture" id=2]
flags = 2
load_path = "res://.import/sky.png-5f245714f6a8ddd8d2d452ade02334b8.stex"

[node name="GameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Gui" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Gui"]

[node name="PauseContainer" type="ColorRect" parent="Gui/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/CanvasLayer/PauseContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="Gui/CanvasLayer/PauseContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 512.0
margin_bottom = 145.0
text = "Pause"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Gui/CanvasLayer/PauseContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 512.0
margin_bottom = 169.0
alignment = 1

[node name="QuitButton" type="Button" parent="Gui/CanvasLayer/PauseContainer/VBoxContainer/HBoxContainer"]
margin_left = 199.0
margin_right = 239.0
margin_bottom = 20.0
text = "Quit"

[node name="ContinueButton" type="Button" parent="Gui/CanvasLayer/PauseContainer/VBoxContainer/HBoxContainer"]
margin_left = 243.0
margin_right = 312.0
margin_bottom = 20.0
text = "Continue"

[node name="HealthBar" type="ProgressBar" parent="Gui/CanvasLayer"]
modulate = Color( 0, 0.847059, 1, 1 )
margin_right = 256.0
margin_bottom = 14.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TemperatureBar" type="ProgressBar" parent="Gui/CanvasLayer"]
modulate = Color( 1, 0, 0, 1 )
anchor_top = 0.390657
anchor_bottom = 0.390657
margin_right = 128.0
margin_bottom = 14.0
rect_rotation = 270.0
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[node name="TemperatureTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MeltingTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 1, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0 )
motion_mirroring = Vector2( 1280, 0 )

[node name="sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = SubResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 360 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0 )
motion_mirroring = Vector2( 1280, 0 )

[node name="sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( -1.01831, 0 )
texture = SubResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 360, 1280, 360 )
[connection signal="pressed" from="Gui/CanvasLayer/PauseContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Gui/CanvasLayer/PauseContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="health_changed" from="Player" to="." method="_on_Player_health_changed"]
[connection signal="timeout" from="TemperatureTimer" to="." method="_on_TemperatureTimer_timeout"]
[connection signal="timeout" from="MeltingTimer" to="." method="_on_MeltingTimer_timeout"]
